--- a/TourPlanner/TourPlanner.PL/MainWindow.xaml
+++ b/TourPlanner/TourPlanner.PL/MainWindow.xaml
@@ -5,8 +5,69 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TourPlanner.PL"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Tour planner" Height="450" Width="800" MinWidth="450" MinHeight="450">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*" MinWidth="100"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="7*" MinWidth="350"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="50*" MinHeight="150"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="25*" MinHeight="150"/>
+        </Grid.RowDefinitions>
+        
+        
+        <!--Menubar and searchbar-->
+        <StackPanel Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3">
+            <DockPanel>
+                <Menu DockPanel.Dock="Top">
+                    <MenuItem Header="_File">
+                        <MenuItem Header="_New" />
+                        <MenuItem Header="_Open" />
+                        <MenuItem Header="_Save" />
+                        <Separator />
+                        <MenuItem Header="_Exit" />
+                    </MenuItem>
+                    <MenuItem Header="_File">
+                        <MenuItem Header="_New" />
+                        <MenuItem Header="_Open" />
+                        <MenuItem Header="_Save" />
+                        <Separator />
+                        <MenuItem Header="_Exit" />
+                    </MenuItem>
+                </Menu>
+            </DockPanel>
+            <TextBox>Searchbar goes here</TextBox>
+        </StackPanel>
+
+        
+        <!--Tourlist-->
+        <StackPanel Grid.Column="0" Grid.Row="1" Grid.RowSpan="3" Background="AliceBlue">
+            <TextBlock >Tourlist goes here</TextBlock>
+        </StackPanel>
+
+        
+        <!--Vertical Splitter between tourlist and detail view + logs-->
+        <GridSplitter Grid.Column="1" Grid.Row="1" Grid.RowSpan="3" Width="5" VerticalAlignment="Stretch" HorizontalAlignment="Center"  />
+        
+        
+        <!--Detailed view of tour-->
+        <StackPanel Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" Background="Azure">
+            <TextBlock >Detail view goes here</TextBlock>
+        </StackPanel>
+
+        
+        <!--List of Logs-->
+        <StackPanel Grid.Column="2" Grid.Row="3" Grid.RowSpan="2" Background="Beige">
+            <TextBlock >Logs go here</TextBlock>
+        </StackPanel>
+
+        
+        <!--Horizontal Splitter between detail view and logs-->
+        <GridSplitter Grid.Row="2"  Grid.Column="2" Height="5" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
 
     </Grid>
 </Window>
