added projects, view, viewmodel and DAL

--- a/TourPlanner/TourPlanner.PL/MainWindow.xaml
+++ b/TourPlanner/TourPlanner.PL/MainWindow.xaml
@@ -14,13 +14,14 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="50*" MinHeight="150"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="25*" MinHeight="150"/>
         </Grid.RowDefinitions>
         
         
-        <!--Menubar and searchbar-->
+        <!--Menubar-->
         <StackPanel Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3">
             <DockPanel>
                 <Menu DockPanel.Dock="Top">
@@ -40,34 +41,37 @@
                     </MenuItem>
                 </Menu>
             </DockPanel>
-            <TextBox>Searchbar goes here</TextBox>
+            
         </StackPanel>
+        
+        <!--search bar-->
+        <TextBox Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3">Searchbar goes here</TextBox>
 
         
         <!--Tourlist-->
-        <StackPanel Grid.Column="0" Grid.Row="1" Grid.RowSpan="3" Background="AliceBlue">
+        <StackPanel Grid.Column="0" Grid.Row="2" Grid.RowSpan="3" Background="AliceBlue">
             <TextBlock >Tourlist goes here</TextBlock>
         </StackPanel>
 
         
         <!--Vertical Splitter between tourlist and detail view + logs-->
-        <GridSplitter Grid.Column="1" Grid.Row="1" Grid.RowSpan="3" Width="5" VerticalAlignment="Stretch" HorizontalAlignment="Center"  />
+        <GridSplitter Grid.Column="1" Grid.Row="2" Grid.RowSpan="3" Width="5" VerticalAlignment="Stretch" HorizontalAlignment="Center"  />
         
         
         <!--Detailed view of tour-->
-        <StackPanel Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" Background="Azure">
+        <StackPanel Grid.Column="2" Grid.Row="2" Grid.RowSpan="2" Background="Azure">
             <TextBlock >Detail view goes here</TextBlock>
         </StackPanel>
 
         
+        <!--Horizontal Splitter between detail view and logs-->
+        <GridSplitter Grid.Row="3"  Grid.Column="2" Height="5" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+        
         <!--List of Logs-->
-        <StackPanel Grid.Column="2" Grid.Row="3" Grid.RowSpan="2" Background="Beige">
+        <StackPanel Grid.Column="2" Grid.Row="4" Grid.RowSpan="2" Background="Beige">
             <TextBlock >Logs go here</TextBlock>
         </StackPanel>
 
-        
-        <!--Horizontal Splitter between detail view and logs-->
-        <GridSplitter Grid.Row="2"  Grid.Column="2" Height="5" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
 
     </Grid>
 </Window>
