--- a/TourPlanner/TourPlanner.PL/View/SearchBarView.xaml
+++ b/TourPlanner/TourPlanner.PL/View/SearchBarView.xaml
@@ -3,9 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TourPlanner.PL.View"
+             xmlns:local="clr-namespace:TourPlanner.PL.View" xmlns:viewmodel="clr-namespace:TourPlanner.PL.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:SearchBarViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="400" d:DesignWidth="400">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" MinWidth="50"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        
+        <TextBox Grid.Row="0" Grid.Column="0" Margin="5,5,0,5" Text="{Binding SearchText}"/>
+        <Button  Grid.Row="0" Grid.Column="1" Margin="0,5,5,5" Command="{Binding SearchCommand}">Search</Button>
     </Grid>
 </UserControl>
