--- a/TourPlanner/TourPlanner.PL/View/ToursView.xaml
+++ b/TourPlanner/TourPlanner.PL/View/ToursView.xaml
@@ -3,10 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TourPlanner.PL.View"
+             xmlns:local="clr-namespace:TourPlanner.PL.View" xmlns:viewmodel="clr-namespace:TourPlanner.PL.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:ToursViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+    <StackPanel>
+        <TextBlock>this will be a list of all the tours</TextBlock>
+        <TextBox Text="{Binding SearchResult}"/>
+    </StackPanel>
 </UserControl>
