--- a/TourPlanner/TourPlanner.PL/View/TourDetailView.xaml
+++ b/TourPlanner/TourPlanner.PL/View/TourDetailView.xaml
@@ -3,10 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TourPlanner.PL.View"
+             xmlns:viewmodel="clr-namespace:TourPlanner.PL.ViewModel"
+             xmlns:local="clr-namespace:TourPlanner.PL.View" d:DataContext="{d:DesignInstance Type=viewmodel:TourDetailViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+
+    <StackPanel>
+        <TextBlock>Detail view of tour goes here</TextBlock>
+    </StackPanel>
 </UserControl>
