--- a/TourPlanner/TourPlanner.PL/View/ToursView.xaml
+++ b/TourPlanner/TourPlanner.PL/View/ToursView.xaml
@@ -6,8 +6,15 @@
              xmlns:local="clr-namespace:TourPlanner.PL.View" xmlns:viewmodel="clr-namespace:TourPlanner.PL.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:ToursViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel>
-        <TextBlock>this will be a list of all the tours</TextBlock>
-        <TextBox Text="{Binding SearchResult}"/>
-    </StackPanel>
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <StackPanel>
+            <ListView x:Name="tourList" ItemsSource="{Binding Tours}">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Tours" DisplayMemberBinding="{Binding Name}"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </StackPanel>
+    </ScrollViewer>
 </UserControl>
