--- a/TourPlanner/TourPlanner.PL/View/ToursView.xaml
+++ b/TourPlanner/TourPlanner.PL/View/ToursView.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <StackPanel>
-            <ListView x:Name="tourList" ItemsSource="{Binding Tours}">
+            <ListView x:Name="tourList" ItemsSource="{Binding Data}">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Tours" DisplayMemberBinding="{Binding Name}"/>
