--- a/TourPlanner/TourPlanner.PL/View/ToursView.xaml
+++ b/TourPlanner/TourPlanner.PL/View/ToursView.xaml
@@ -8,6 +8,9 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <StackPanel>
+            <Button Command="{Binding AddTourCommand}" >Add Tour</Button>
+            <Button Command="{Binding RemoveTourCommand}" >Remove Tour</Button>
+            <Button Command="{Binding EditTourCommand}" >Edit Tour</Button>
             <ListView x:Name="tourList" SelectedItem="{Binding SelectedTour}" ItemsSource="{Binding Data}">
                 <ListView.View>
                     <GridView>
