--- a/TourPlanner/TourPlanner.PL/View/TourDetailView.xaml
+++ b/TourPlanner/TourPlanner.PL/View/TourDetailView.xaml
@@ -7,6 +7,8 @@
              xmlns:local="clr-namespace:TourPlanner.PL.View" d:DataContext="{d:DesignInstance Type=viewmodel:TourDetailViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <StackPanel>
+        
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"></ColumnDefinition>
@@ -43,5 +45,6 @@
         <TextBlock Grid.Row="6" Grid.Column="0">Estimated time</TextBlock>
         <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding SelectedTour.EstimatedTime}" ></TextBox>
     </Grid>
-    
+        <Button Command="{Binding ApplyChangesCommand}" IsEnabled="{Binding ApplyButtonIsEnabled}">Apply</Button>
+    </StackPanel>
 </UserControl>
