app suports now api calls with needed tour data and image

--- a/TourPlanner/TourPlanner.PL/View/TourDetailView.xaml
+++ b/TourPlanner/TourPlanner.PL/View/TourDetailView.xaml
@@ -5,47 +5,60 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:viewmodel="clr-namespace:TourPlanner.PL.ViewModel.Sub"
              xmlns:local="clr-namespace:TourPlanner.PL.View" d:DataContext="{d:DesignInstance Type=viewmodel:TourDetailViewModel}"
+             xmlns:helper="clr-namespace:TourPlanner.PL.Helper"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel>
-        
+    <UserControl.Resources>
+        <helper:StringToImageConverter x:Key="StringToImageConverter"/>
+    </UserControl.Resources>
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-        </Grid.RowDefinitions>
-        
-        <TextBlock Grid.Row="0" Grid.Column="0">Name</TextBlock>
-        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding SelectedTour.Name}" ></TextBox>
+        <TabControl>
+            <TabItem Header="Info">
+                <StackPanel>
 
-        <TextBlock Grid.Row="1" Grid.Column="0">Description</TextBlock>
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding SelectedTour.Start}" ></TextBox>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto"></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"></RowDefinition>
+                            <RowDefinition Height="auto"></RowDefinition>
+                            <RowDefinition Height="auto"></RowDefinition>
+                            <RowDefinition Height="auto"></RowDefinition>
+                            <RowDefinition Height="auto"></RowDefinition>
+                            <RowDefinition Height="auto"></RowDefinition>
+                            <RowDefinition Height="auto"></RowDefinition>
+                        </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="2" Grid.Column="0">Start</TextBlock>
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding SelectedTour.Destination}" ></TextBox>
+                        <TextBlock Grid.Row="0" Grid.Column="0">Name</TextBlock>
+                        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding SelectedTour.Name}" ></TextBox>
 
-        <TextBlock Grid.Row="3" Grid.Column="0">Destination</TextBlock>
-        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding SelectedTour.EstimatedTime}" ></TextBox>
+                        <TextBlock Grid.Row="1" Grid.Column="0">Start</TextBlock>
+                        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding SelectedTour.Start}" ></TextBox>
 
-        <TextBlock Grid.Row="4" Grid.Column="0">Transport type</TextBlock>
-        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding SelectedTour.TransportType}" ></TextBox>
+                        <TextBlock Grid.Row="2" Grid.Column="0">Destination</TextBlock>
+                        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding SelectedTour.Destination}" ></TextBox>
 
-        <TextBlock Grid.Row="5" Grid.Column="0">Tour distance</TextBlock>
-        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SelectedTour.TourDistance}" ></TextBox>
+                        <TextBlock Grid.Row="3" Grid.Column="0">EstimatedTime</TextBlock>
+                        <TextBox Grid.Row="3" Grid.Column="1" IsReadOnly="True" Text="{Binding SelectedTour.EstimatedTime}" ></TextBox>
 
-        <TextBlock Grid.Row="6" Grid.Column="0">Estimated time</TextBlock>
-        <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding SelectedTour.Description}" ></TextBox>
+                        <TextBlock Grid.Row="4" Grid.Column="0">Transport type</TextBlock>
+                        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding SelectedTour.TransportType}" ></TextBox>
+
+                        <TextBlock Grid.Row="5" Grid.Column="0">Tour distance</TextBlock>
+                        <TextBox Grid.Row="5" Grid.Column="1" IsReadOnly="True" Text="{Binding SelectedTour.TourDistance}" ></TextBox>
+
+                        <TextBlock Grid.Row="6" Grid.Column="0">Description</TextBlock>
+                        <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding SelectedTour.Description}" ></TextBox>
+                    </Grid>
+                    <Button Command="{Binding ApplyChangesCommand}">Apply</Button>
+                    <Button Command="{Binding CancelChangesCommand}">Cancel</Button>
+                </StackPanel>
+            </TabItem>
+            <TabItem Header="Map">
+                <Image Source="{Binding SourceUri, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource StringToImageConverter}}"/>
+            </TabItem>
+        </TabControl>
     </Grid>
-        <Button Command="{Binding ApplyChangesCommand}">Apply</Button>
-        <Button Command="{Binding CancelChangesCommand}">Cancel</Button>
-    </StackPanel>
 </UserControl>
