cleaned up using and added tourlog implementation

--- a/TourPlanner/TourPlanner.PL/View/LogsView.xaml
+++ b/TourPlanner/TourPlanner.PL/View/LogsView.xaml
@@ -9,8 +9,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <StackPanel>
-        <TextBlock>Logs of tour goes here</TextBlock>
-        <DataGrid AutoGenerateColumns="False" SelectedItem="{Binding SelectedTourLog}" Margin="5,5,5,5" ItemsSource="{Binding Path=TourLogs}">
+        <!--<DataGrid AutoGenerateColumns="False" SelectedItem="{Binding SelectedTourLog}" Margin="5,5,5,5" ItemsSource="{Binding Path=TourLogs}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Date" Binding="{Binding Path=Date}" />
                 <DataGridTextColumn Header="Difficulty" Binding="{Binding Path=Difficulty}"/>
@@ -18,6 +17,23 @@
                 <DataGridTextColumn Header="Duration" Binding="{Binding Path=CompletionTime}"/>
                 <DataGridTextColumn Width="*" Header="Comment" Binding="{Binding Path=Comment}"/>
             </DataGrid.Columns>
-        </DataGrid>
+        </DataGrid>-->
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <StackPanel>
+                <Button Command="{Binding AddTourLogCommand}" >Add Tour</Button>
+                <Button Command="{Binding RemoveTourLogCommand}" >Remove Tour</Button>
+                <ListView x:Name="tourList" SelectedItem="{Binding SelectedTourLog}" ItemsSource="{Binding TourLogs}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="Date" DisplayMemberBinding="{Binding Date}"/>
+                            <GridViewColumn Header="Difficulty" DisplayMemberBinding="{Binding Difficulty}"/>
+                            <GridViewColumn Header="Rating" DisplayMemberBinding="{Binding Rating}"/>
+                            <GridViewColumn Header="Duration" DisplayMemberBinding="{Binding CompletionTime}"/>
+                            <GridViewColumn Header="Comment" DisplayMemberBinding="{Binding Comment}"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </StackPanel>
+        </ScrollViewer>
     </StackPanel>
 </UserControl>
