--- a/TourPlanner/TourPlanner.PL/View/LogsView.xaml
+++ b/TourPlanner/TourPlanner.PL/View/LogsView.xaml
@@ -7,9 +7,7 @@
              xmlns:local="clr-namespace:TourPlanner.PL.View" d:DataContext="{d:DesignInstance Type=viewmodel:LogsViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-
-    <StackPanel>
-        <!--<DataGrid AutoGenerateColumns="False" SelectedItem="{Binding SelectedTourLog}" Margin="5,5,5,5" ItemsSource="{Binding Path=TourLogs}">
+    <!--<DataGrid AutoGenerateColumns="False" SelectedItem="{Binding SelectedTourLog}" Margin="5,5,5,5" ItemsSource="{Binding Path=TourLogs}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Date" Binding="{Binding Path=Date}" />
                 <DataGridTextColumn Header="Difficulty" Binding="{Binding Path=Difficulty}"/>
@@ -41,9 +39,9 @@
                         <RowDefinition Height="auto"></RowDefinition>
                     </Grid.RowDefinitions>
                 </Grid>
-                <Button Command="{Binding AddTourLogCommand}" >Add Tour</Button>
-                <Button Command="{Binding RemoveTourLogCommand}" >Remove Tour</Button>
+                <Button Command="{Binding AddTourLogCommand}" >Add TourLog</Button>
+                <Button Command="{Binding RemoveTourLogCommand}" >Remove TourLog</Button>
+                <Button Command="{Binding EditTourLogCommand}" >Edit TourLog</Button>
             </StackPanel>
         </ScrollViewer>
-    </StackPanel>
 </UserControl>
